--- a/package.json
+++ b/package.json
@@ -23,16 +23,27 @@
     "@ionic-native/core": "~4.15.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
-    "@ionic/storage": "2.2.0",
+    "@ionic/lab": "^1.0.13",
+    "@ionic/storage": "^2.2.0",
+    "ajv": "^6.5.5",
+    "angular": "^1.7.5",
+    "cordova-sqlite-storage": "2.5.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "natives": "^1.1.6",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.0",
+    "@angular/cli": "^7.0.6",
+    "@ionic/app-scripts": "^3.2.0",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-sqlite-storage": {}
+    }
+  }
 }
